# yadgirino_scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
example_output/: example_info.json  example_links.json
yadgirino/: items.py  middlewares.py  pipelines.py  settings.py
yadgirino/spiders/: courses.py
